intro sweeps for all datasets

--- a/prep_embeddings.ipynb
+++ b/prep_embeddings.ipynb
@@ -205,9 +205,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7284\n",
+      "3166\n"
+     ]
+    }
+   ],
    "source": [
     "train = train_est_prepared.copy()\n",
     "val = val_est_prepared.copy()\n",
@@ -226,6 +235,48 @@
     "train_curie.to_csv('data/text_embeddings/train_curie.csv', index_label='id')\n",
     "val_curie.to_csv('data/text_embeddings/val_curie.csv', index_label='id')\n",
     "test_curie.to_csv('data/text_embeddings/test_curie.csv', index_label='id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7284\n",
+      "3166\n",
+      "4516\n",
+      "4516\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = combined_intermediate_ready.copy()\n",
+    "trainval = data.loc[data['source']=='train']\n",
+    "test = data.loc[data['source']=='test']\n",
+    "train, val = train_test_split(trainval, test_size=0.3, random_state=0)\n",
+    "\n",
+    "trainval_curie = curie[curie.source == 'train'].drop(columns=['source'])\n",
+    "test_curie = curie[curie.source == 'test'].drop(columns=['source'])\n",
+    "\n",
+    "train_curie = pd.DataFrame.join(train[['element_count']], trainval_curie)\n",
+    "train_curie.dropna(axis=0, inplace=True)\n",
+    "train_curie.drop(columns=['element_count'], inplace=True)\n",
+    "print(len(train_curie))\n",
+    "\n",
+    "val_curie = pd.DataFrame.join(val[['element_count']], trainval_curie)\n",
+    "val_curie.dropna(axis=0, inplace=True)\n",
+    "val_curie.drop(columns=['element_count'], inplace=True)\n",
+    "print(len(val_curie))\n",
+    "\n",
+    "test_curie = pd.DataFrame.join(test[['element_count']], test_curie)\n",
+    "test_curie = test_curie.drop(columns=['type'])\n",
+    "test_curie.dropna(axis=0, inplace=True)\n",
+    "test_curie.drop(columns=['element_count'], inplace=True)\n",
+    "print(len(test_curie))\n"
    ]
   },
   {
