model builder intro

--- a/pred_voter estonian.ipynb
+++ b/pred_voter estonian.ipynb
@@ -241,7 +241,8 @@
     "# is the full ds used for submission?\n",
     "full = True\n",
     "# submit to \n",
-    "sub_name = 'only_save_pred.csv'"
+    "name = 'red'\n",
+    "sub_name = name + '.csv'"
    ]
   },
   {
@@ -267,10 +268,7 @@
     "rf = pickle.load(open('./models/rf/train_prep_full_best' , 'rb'))\n",
     "\n",
     "boost_emb = XGBClassifier()\n",
-    "boost_emb.load_model('models/nlp/xgboost_03.json')\n",
-    "\n",
-    "nn = TabNetClassifier()\n",
-    "nn.load_model('models/nn/tabnet_full.zip')"
+    "boost_emb.load_model('models/nlp/xgboost_03.json')"
    ]
   },
   {
@@ -305,16 +303,7 @@
     "results.set_index('id', inplace=True)\n",
     "if not full: results['type'] = y_test\n",
     "\n",
-    "#results['rf'] = rf.predict(X_test)\n",
-    "#results['xg'] = xgb.predict_proba(X_test)\n",
-    "#results['nn'] = nn.predict(X_test.values)\n",
-    "\n",
-    "results['filter'] = [-1] * len(results)\n",
-    "results['indi'] = [-1] * len(results)\n",
-    "results['save'] = [-1] * len(results)\n",
     "results['emb'] = [[-1]] * len(results)\n",
-    "\n",
-    "\n",
     "results['xg'] = [[-1]] * len(results)"
    ]
   },
@@ -446,16 +435,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "album foto\n",
-    "ajaleht dokument\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -583,7 +562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
