--- a/preparation.ipynb
+++ b/preparation.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/till/projects/uni/data science/museum_item_classification/setup_general.py:92: DtypeWarning: Columns (11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/home/till/projects/uni/data science/museum_item_classification/setup_general.py:95: DtypeWarning: Columns (11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  combined_intermediate_ready = pd.read_csv('./data/general/combined_intermediate_ready.csv', index_col='id', dtype={'type': str})\n"
      ]
     }
@@ -471,8 +471,8 @@
     "threshold_sum = len(data) * perc\n",
     "min_freq = 7\n",
     "\n",
-    "tech = helpers.col_collection(data, 'technique_')\n",
-    "mat = helpers.col_collection(data, 'material_')\n",
+    "tech = prep_helpers.col_collection(data, 'technique_')\n",
+    "mat = prep_helpers.col_collection(data, 'material_')\n",
     "size = data.columns[data.columns.str.contains('IN')]\n",
     "\n",
     "features = [tech,mat,size]\n",
@@ -643,7 +643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
