--- a/preparation.ipynb
+++ b/preparation.ipynb
@@ -24,6 +24,121 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "full_nr                     6267\n",
+       "name                        5364\n",
+       "material                      96\n",
+       "commentary                   147\n",
+       "event_type                   419\n",
+       "location                     268\n",
+       "start                       1253\n",
+       "end                          248\n",
+       "before_Christ                  1\n",
+       "country_and_unit             126\n",
+       "participants_role             44\n",
+       "participant                 1434\n",
+       "parish                         8\n",
+       "text                         133\n",
+       "class                          2\n",
+       "technique                     86\n",
+       "parameter                     23\n",
+       "unit                          21\n",
+       "value                        648\n",
+       "museum_abbr                    2\n",
+       "musealia_mark                  1\n",
+       "musealia_additional_nr        67\n",
+       "collection_mark               32\n",
+       "collection_additional_nr    2657\n",
+       "legend                       491\n",
+       "initial_info                 788\n",
+       "damages                      439\n",
+       "state                          5\n",
+       "color                         40\n",
+       "additional_text             1599\n",
+       "type                          55\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.select_dtypes([\"object\"]).nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 9800 entries, 2065396 to 2040107\n",
+      "Data columns (total 31 columns):\n",
+      " #   Column                    Non-Null Count  Dtype \n",
+      "---  ------                    --------------  ----- \n",
+      " 0   full_nr                   6267 non-null   object\n",
+      " 1   name                      6267 non-null   object\n",
+      " 2   material                  6267 non-null   object\n",
+      " 3   commentary                296 non-null    object\n",
+      " 4   event_type                6497 non-null   object\n",
+      " 5   location                  849 non-null    object\n",
+      " 6   start                     4157 non-null   object\n",
+      " 7   end                       882 non-null    object\n",
+      " 8   before_Christ             3825 non-null   object\n",
+      " 9   country_and_unit          6497 non-null   object\n",
+      " 10  participants_role         4341 non-null   object\n",
+      " 11  participant               4341 non-null   object\n",
+      " 12  parish                    11 non-null     object\n",
+      " 13  text                      163 non-null    object\n",
+      " 14  class                     163 non-null    object\n",
+      " 15  technique                 3916 non-null   object\n",
+      " 16  parameter                 4521 non-null   object\n",
+      " 17  unit                      4521 non-null   object\n",
+      " 18  value                     4521 non-null   object\n",
+      " 19  museum_abbr               9799 non-null   object\n",
+      " 20  musealia_mark             7244 non-null   object\n",
+      " 21  musealia_additional_nr    344 non-null    object\n",
+      " 22  collection_mark           9799 non-null   object\n",
+      " 23  collection_additional_nr  5225 non-null   object\n",
+      " 24  legend                    2186 non-null   object\n",
+      " 25  initial_info              1156 non-null   object\n",
+      " 26  damages                   808 non-null    object\n",
+      " 27  state                     9800 non-null   object\n",
+      " 28  color                     320 non-null    object\n",
+      " 29  additional_text           2115 non-null   object\n",
+      " 30  type                      9800 non-null   object\n",
+      "dtypes: object(31)\n",
+      "memory usage: 2.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "train.select_dtypes([\"object\"]).info()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "te for:\n",
+    "- material\n",
+    "- event_type"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
