prep part of typeless

--- a/typeless_data_discovery.ipynb
+++ b/typeless_data_discovery.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,25 +23,12 @@
     "materials = pd.read_csv('data/typeless/materials.csv')\n",
     "technique = pd.read_csv('data/typeless/technique.csv')\n",
     "\n",
-    "dfs = [additional_name, description, events, general_info]\n",
-    "\n",
     "all_types = pd.read_excel('data/typeless/all_types.xlsx')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from functools import reduce\n",
-    "df_merged = reduce(lambda  left,right: pd.merge(left,right,on=['MUSEAAL_ID'],\n",
-    "                                            how='outer'), dfs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +101,7 @@
        "4  3932              17444                         ahi"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +290,7 @@
        "2065396             NaN  foto  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,104 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>MUSEAAL_ID</th>\n",
-       "      <th>TAIS_NR</th>\n",
-       "      <th>TEKST</th>\n",
-       "      <th>LIIK</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2226246</td>\n",
-       "      <td>ÜAM _ 1146:44/b AjAM 1:41/b</td>\n",
-       "      <td>Alus peeglile</td>\n",
-       "      <td>endine nimetus</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1107089</td>\n",
-       "      <td>VK _ 4841:7 Ek 1:7</td>\n",
-       "      <td>Munamägi</td>\n",
-       "      <td>valmistaja nimetus</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1414607</td>\n",
-       "      <td>ETMM _ 12389:44 F 1:45</td>\n",
-       "      <td>Foto Neeme Järvi</td>\n",
-       "      <td>nimetus lähtedokumendil</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1415323</td>\n",
-       "      <td>ETMM _ 12389:80 F 1:72</td>\n",
-       "      <td>Foto Kati Murutar</td>\n",
-       "      <td>nimetus lähtedokumendil</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1415334</td>\n",
-       "      <td>ETMM _ 12389:91 F 1:134</td>\n",
-       "      <td>Foto Allan Roosileht</td>\n",
-       "      <td>nimetus lähtedokumendil</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   MUSEAAL_ID                      TAIS_NR                 TEKST  \\\n",
-       "0     2226246  ÜAM _ 1146:44/b AjAM 1:41/b         Alus peeglile   \n",
-       "1     1107089           VK _ 4841:7 Ek 1:7              Munamägi   \n",
-       "2     1414607       ETMM _ 12389:44 F 1:45      Foto Neeme Järvi   \n",
-       "3     1415323       ETMM _ 12389:80 F 1:72     Foto Kati Murutar   \n",
-       "4     1415334      ETMM _ 12389:91 F 1:134  Foto Allan Roosileht   \n",
-       "\n",
-       "                      LIIK  \n",
-       "0           endine nimetus  \n",
-       "1       valmistaja nimetus  \n",
-       "2  nimetus lähtedokumendil  \n",
-       "3  nimetus lähtedokumendil  \n",
-       "4  nimetus lähtedokumendil  "
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "additional_name.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,231 +329,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>MUSEAAL_ID</th>\n",
-       "      <th>TAIS_NR</th>\n",
-       "      <th>NIMETUS</th>\n",
-       "      <th>PARAMEETER</th>\n",
-       "      <th>YHIK</th>\n",
-       "      <th>VAARTUS</th>\n",
-       "      <th>KOMMENTAAR</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>98554</td>\n",
-       "      <td>KMM GE 20:296</td>\n",
-       "      <td>Amor (Eros) ja Psyche</td>\n",
-       "      <td>kõrgus</td>\n",
-       "      <td>cm</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   MUSEAAL_ID        TAIS_NR                NIMETUS PARAMEETER YHIK  VAARTUS  \\\n",
-       "0       98554  KMM GE 20:296  Amor (Eros) ja Psyche     kõrgus   cm      4.5   \n",
-       "\n",
-       "  KOMMENTAAR  \n",
-       "0        NaN  "
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# commentary super rare -> could be used finally, also in tech, mat\n",
-    "# get Name?\n",
-    "# rename params\n",
-    "dimensions.head(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# for now dont use all awailable measures\n",
     "dimensions = dimensions.rename(columns={'PARAMEETER':'parameter','TAIS_NR':'full_nr', 'NIMETUS':'name', 'YHIK':'unit','VAARTUS':'value'}).drop(columns=['KOMMENTAAR'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>MUSEAAL_ID</th>\n",
-       "      <th>TAIS_NR</th>\n",
-       "      <th>SYNDMUSE_LIIK</th>\n",
-       "      <th>ASUKOHT</th>\n",
-       "      <th>ALGUS</th>\n",
-       "      <th>LOPP</th>\n",
-       "      <th>ENNE_KR</th>\n",
-       "      <th>KUU</th>\n",
-       "      <th>RIIK_ADMIN_KOND</th>\n",
-       "      <th>OSALEJA_ROLL</th>\n",
-       "      <th>OSALEJA</th>\n",
-       "      <th>KIHELKOND</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>109350</td>\n",
-       "      <td>KLM ET F22 1:4/1,2,3</td>\n",
-       "      <td>KVIS sündmus puudub</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td></td>\n",
-       "      <td>koguja</td>\n",
-       "      <td>Hennoste, Mihkel</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>245718</td>\n",
-       "      <td>PM TALK 1</td>\n",
-       "      <td>botaanika</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1929</td>\n",
-       "      <td>1931</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Eesti</td>\n",
-       "      <td>kasutaja/omanik</td>\n",
-       "      <td>Türi apteek</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1339439</td>\n",
-       "      <td>TM _ 24:29 K 1:29</td>\n",
-       "      <td>kutseharidus</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1918</td>\n",
-       "      <td>1944</td>\n",
-       "      <td>ei</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Eesti  Tartumaa</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1339438</td>\n",
-       "      <td>TM _ 24:28 K 1:28</td>\n",
-       "      <td>kutseharidus</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1918</td>\n",
-       "      <td>1944</td>\n",
-       "      <td>ei</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Eesti  Tartumaa</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1339437</td>\n",
-       "      <td>TM _ 24:27 K 1:27</td>\n",
-       "      <td>kutseharidus</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1918</td>\n",
-       "      <td>1944</td>\n",
-       "      <td>ei</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Eesti  Tartumaa</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   MUSEAAL_ID               TAIS_NR        SYNDMUSE_LIIK ASUKOHT ALGUS  LOPP  \\\n",
-       "0      109350  KLM ET F22 1:4/1,2,3  KVIS sündmus puudub     NaN   NaN   NaN   \n",
-       "1      245718             PM TALK 1            botaanika     NaN  1929  1931   \n",
-       "2     1339439     TM _ 24:29 K 1:29         kutseharidus     NaN  1918  1944   \n",
-       "3     1339438     TM _ 24:28 K 1:28         kutseharidus     NaN  1918  1944   \n",
-       "4     1339437     TM _ 24:27 K 1:27         kutseharidus     NaN  1918  1944   \n",
-       "\n",
-       "  ENNE_KR  KUU  RIIK_ADMIN_KOND     OSALEJA_ROLL           OSALEJA KIHELKOND  \n",
-       "0     NaN  NaN                            koguja  Hennoste, Mihkel       NaN  \n",
-       "1     NaN  NaN          Eesti    kasutaja/omanik       Türi apteek       NaN  \n",
-       "2      ei  NaN  Eesti  Tartumaa              NaN               NaN       NaN  \n",
-       "3      ei  NaN  Eesti  Tartumaa              NaN               NaN       NaN  \n",
-       "4      ei  NaN  Eesti  Tartumaa              NaN               NaN       NaN  "
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "events.head()"
+    "dimensions = dimensions.groupby('MUSEAAL_ID', as_index=True).first()[['parameter', 'unit', 'value']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,11 +429,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "technique = technique.groupby('MUSEAAL_ID', as_index=True).agg({'technique':'>'.join})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfs = [additional_name, description, events, general_info, materials, technique, dimensions]\n",
+    "\n",
+    "from functools import reduce\n",
+    "df_merged = reduce(lambda  left,right: pd.merge(left,right,on=['MUSEAAL_ID'],\n",
+    "                                            how='outer'), dfs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_merged.index.names=['id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "typeless_samples = df_merged.sample(n=1000, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/till/projects/uni/data science/museum_item_classification/prep_helpers.py:201: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  text.text_features = text.text_features.apply(lambda x: x.strip())\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = get_text_df(typeless_samples.copy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text.to_csv('data/typeless/text.csv', index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "typeless_samples.to_csv('data/typeless/data.csv', index=True)\n",
+    "# running it through preparation.ipynb"
    ]
   }
  ],
