--- a/preparation.ipynb
+++ b/preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -25,117 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "full_nr                     6267\n",
-       "name                        5364\n",
-       "material                      96\n",
-       "commentary                   147\n",
-       "event_type                   419\n",
-       "location                     268\n",
-       "start                       1253\n",
-       "end                          248\n",
-       "before_Christ                  1\n",
-       "country_and_unit             126\n",
-       "participants_role             44\n",
-       "participant                 1434\n",
-       "parish                         8\n",
-       "text                         133\n",
-       "class                          2\n",
-       "technique                     86\n",
-       "parameter                     23\n",
-       "unit                          21\n",
-       "value                        648\n",
-       "museum_abbr                    2\n",
-       "musealia_mark                  1\n",
-       "musealia_additional_nr        67\n",
-       "collection_mark               32\n",
-       "collection_additional_nr    2657\n",
-       "legend                       491\n",
-       "initial_info                 788\n",
-       "damages                      439\n",
-       "state                          5\n",
-       "color                         40\n",
-       "additional_text             1599\n",
-       "type                          55\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train.select_dtypes([\"object\"]).nunique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 9800 entries, 2065396 to 2040107\n",
-      "Data columns (total 31 columns):\n",
-      " #   Column                    Non-Null Count  Dtype \n",
-      "---  ------                    --------------  ----- \n",
-      " 0   full_nr                   6267 non-null   object\n",
-      " 1   name                      6267 non-null   object\n",
-      " 2   material                  6267 non-null   object\n",
-      " 3   commentary                296 non-null    object\n",
-      " 4   event_type                6497 non-null   object\n",
-      " 5   location                  849 non-null    object\n",
-      " 6   start                     4157 non-null   object\n",
-      " 7   end                       882 non-null    object\n",
-      " 8   before_Christ             3825 non-null   object\n",
-      " 9   country_and_unit          6497 non-null   object\n",
-      " 10  participants_role         4341 non-null   object\n",
-      " 11  participant               4341 non-null   object\n",
-      " 12  parish                    11 non-null     object\n",
-      " 13  text                      163 non-null    object\n",
-      " 14  class                     163 non-null    object\n",
-      " 15  technique                 3916 non-null   object\n",
-      " 16  parameter                 4521 non-null   object\n",
-      " 17  unit                      4521 non-null   object\n",
-      " 18  value                     4521 non-null   object\n",
-      " 19  museum_abbr               9799 non-null   object\n",
-      " 20  musealia_mark             7244 non-null   object\n",
-      " 21  musealia_additional_nr    344 non-null    object\n",
-      " 22  collection_mark           9799 non-null   object\n",
-      " 23  collection_additional_nr  5225 non-null   object\n",
-      " 24  legend                    2186 non-null   object\n",
-      " 25  initial_info              1156 non-null   object\n",
-      " 26  damages                   808 non-null    object\n",
-      " 27  state                     9800 non-null   object\n",
-      " 28  color                     320 non-null    object\n",
-      " 29  additional_text           2115 non-null   object\n",
-      " 30  type                      9800 non-null   object\n",
-      "dtypes: object(31)\n",
-      "memory usage: 2.4+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "train.select_dtypes([\"object\"]).info()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "te for:\n",
-    "- material\n",
-    "- event_type"
+    "data = pd.read_csv('data/typeless/data.csv', index_col='id')"
    ]
   },
   {
@@ -156,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,21 +238,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_36092/1818565639.py:93: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  data['startYear'].iloc[i] = data['endYear'].iloc[i]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#groups the year into its own column with the complete number, if NaN, then 0\n",
     "def year_Grouping(x):\n",
@@ -469,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,10 +375,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "5fa6bb3b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'color'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/indexes/base.py:3800\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3799\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m-> 3800\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mget_loc(casted_key)\n\u001b[1;32m   3801\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/_libs/index.pyx:138\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/_libs/index.pyx:165\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5745\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5753\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'color'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m/home/till/projects/uni/data science/museum_item_classification/preparation.ipynb Cell 15\u001b[0m in \u001b[0;36m<cell line: 35>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/preparation.ipynb#X22sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m         \u001b[39mreturn\u001b[39;00m x\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/preparation.ipynb#X22sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m \u001b[39m#apply colour_grouping to the dataset\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/preparation.ipynb#X22sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m data[\u001b[39m'\u001b[39m\u001b[39mcolor\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m data[\u001b[39m'\u001b[39;49m\u001b[39mcolor\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39mapply(colour_grouping)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/frame.py:3805\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3803\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m   3804\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3805\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[1;32m   3806\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3807\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/indexes/base.py:3802\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3800\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\u001b[39m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3801\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[0;32m-> 3802\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[1;32m   3803\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[1;32m   3804\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3805\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3806\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3807\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'color'"
+     ]
+    }
+   ],
    "source": [
     "#Grouping colours by their base colour - to avoid too many extra cloumns when hot encoding -> could always reverse this step\n",
     "#by using  something like data['color'] = combined_data_translated['color'] ?\n",
@@ -545,17 +449,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# scale numeric features\n",
-    "numeric_features = ['ks', 'musealia_seria_nr', 'musealia_queue_nr', 'collection_queue_nr', 'element_count']\n",
+    "numeric_features = [value for value in ['ks', 'musealia_seria_nr', 'musealia_queue_nr', 'collection_queue_nr', 'element_count'] if value in data.columns]\n",
     "# continous numeric features (nan -> 0)\n",
     "\n",
     "data[numeric_features] = data[numeric_features].replace(np.nan, 0)\n",
     "\n",
     "data[numeric_features] = MinMaxScaler().fit_transform(data[numeric_features])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('./data/typeless/intermediate_ready_data.csv', index=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# UNTIL HERE DATA INTERMEDIATELLY PREPED"
    ]
   },
   {
