make train pipeline work

--- a/pred_voter_ORIGINAL.ipynb
+++ b/pred_voter_ORIGINAL.ipynb
@@ -129,8 +129,10 @@
     "boost_emb = XGBClassifier()\n",
     "boost_emb.load_model('models/nlp/bal_full_xg_emb.json')\n",
     "\n",
+    "\"\"\"\"\n",
     "nn = TabNetClassifier()\n",
-    "nn.load_model('models/nn/tabnet_full.zip')"
+    "nn.load_model('models/nn/tabnet_full.zip')\n",
+    "\"\"\""
    ]
   },
   {
