align data for inference

--- a/inf.ipynb
+++ b/inf.ipynb
@@ -2,14 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,12 +19,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def text_to_bow(text_path, max_n_gram=2, max_features=2000):\n",
-    "    dataset = pd.read_csv(text_path)\n",
+    "def text_to_bow(path, max_n_gram=2, max_features=2000):\n",
+    "    dataset = pd.read_csv(path)\n",
+    "\n",
+    "    with open('data/general/estonian-stopwords.txt') as file:\n",
+    "        lines = [line.rstrip() for line in file]\n",
+    "    stopwords_est = lines\n",
     "    stop_words = stopwords_est\n",
     "\n",
     "    CountVec = TfidfVectorizer(ngram_range=(1,max_n_gram), stop_words=stop_words, max_features=max_features)\n",
@@ -47,12 +44,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/till/.local/lib/python3.10/site-packages/sklearn/base.py:329: UserWarning: Trying to unpickle estimator DecisionTreeClassifier from version 1.1.3 when using version 1.1.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n",
+      "/home/till/.local/lib/python3.10/site-packages/sklearn/base.py:329: UserWarning: Trying to unpickle estimator RandomForestClassifier from version 1.1.3 when using version 1.1.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n",
+      "/home/till/.local/lib/python3.10/site-packages/sklearn/feature_extraction/text.py:404: UserWarning: Your stop_words may be inconsistent with your preprocessing. Tokenizing the stop words generated tokens ['aidu', 'bai', 'emb', 'emba', 'emma', 'emmaks', 'emmal', 'emmale', 'emmalt', 'emmas', 'emmasse', 'emmast', 'ha', 'he', 'heldeke', 'hii', 'hip', 'hoh', 'hä', 'hää', 'ih', 'ii', 'jaa', 'killa', 'kimps', 'kips', 'kirr', 'kirra', 'klu', 'kluu', 'kohva', 'kolla', 'kripa', 'krips', 'kõlk', 'kõlla', 'kõlladi', 'kõrra', 'köki', 'liiri', 'lika', 'likat', 'lutu', 'luutu', 'lõka', 'lõkat', 'lõõri', 'mull', 'mäta', 'möki', 'müh', 'müt', 'müta', 'ne', 'nämm', 'nõka', 'nõksat', 'nühkat', 'piiri', 'piu', 'pup', 'pääri', 'põrra', 'raidu', 'rips', 'sahka', 'sahkadi', 'setme', 'setmed', 'setmega', 'setmeid', 'setmeiks', 'setmeil', 'setmeile', 'setmeilt', 'setmeis', 'setmeisse', 'setmeist', 'setmeks', 'setmel', 'setmele', 'setmelt', 'setmena', 'setmeni', 'setmes', 'setmesse', 'setmest', 'setmeta', 'setmete', 'setmetega', 'setmeteks', 'setmetel', 'setmetele', 'setmetelt', 'setmetena', 'setmeteni', 'setmetes', 'setmetesse', 'setmetest', 'setmeteta', 'setu', 'setut', 'sihka', 'sihkadi', 'sihkat', 'silk', 'solk', 'suhkat', 'sulla', 'sulpa', 'summat', 'tall', 'talla', 'tap', 'tibi', 'tikk', 'tilla', 'tot', 'tutu', 'tuutu', 'vinki', 'vurra'] not in stop_words.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "\n",
     "models = {}\n",
     "\n",
     "dir = 'models/column/'\n",
@@ -63,18 +73,17 @@
     "\n",
     "data = {}\n",
     "data['column'] = pd.read_csv('data/inference/AM_ETMM_column.csv')\n",
-    "#data['text'] = pd.read_csv('data/inference/AM_ETMM_text.csv')\n",
-    "\n"
+    "data['text'] = text_to_bow(path='data/inference/AM_ETMM_text.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "results = pd.DataFrame()\n",
-    "results['id'] = data.index\n",
+    "results['id'] = data['column'].index\n",
     "results.set_index('id', inplace=True)\n",
     "\n",
     "for key, model in models.items():\n",
@@ -85,35 +94,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "853\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'text'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m/home/till/projects/uni/data science/museum_item_classification/inf.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/inf.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfor\u001b[39;00m key, model \u001b[39min\u001b[39;00m models\u001b[39m.\u001b[39mitems():\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/inf.ipynb#W3sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     current_data \u001b[39m=\u001b[39m data[key]\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/inf.ipynb#W3sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mlen\u001b[39m(model\u001b[39m.\u001b[39mfeature_names_in_))\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/inf.ipynb#W3sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     model_features \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39mfeature_names_in_\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'text'"
+      "853\n",
+      "853\n",
+      "2000\n",
+      "2000\n"
      ]
     }
    ],
    "source": [
+    "import warnings\n",
+    "warnings.simplefilter(action='ignore', category=pd.errors.PerformanceWarning)\n",
+    "\n",
     "for key, model in models.items():\n",
     "    current_data = data[key]\n",
     "    print(len(model.feature_names_in_))\n",
     "    model_features = model.feature_names_in_\n",
     "    data_features = current_data.columns\n",
-    "    \n",
+    "\n",
+    "    # align features\n",
+    "    model_not_data = [feature for feature in model_features if feature not in data_features]\n",
+    "    current_data[model_not_data] = 0\n",
+    "    intersection = [feature for feature in current_data.columns if feature in model_features]\n",
+    "    current_data = current_data[intersection]\n",
     "    \n"
    ]
   }
