--- a/prep_embeddings.ipynb
+++ b/prep_embeddings.ipynb
@@ -139,6 +139,8 @@
     "text.text_features = text.text_features.apply(lambda x: x.strip())\n",
     "text = text[text.text_features != '']\n",
     "\n",
+    "text['type'] = text['type'].replace('fotonegatiiv, fotonegatiiv', 'fotonegatiiv')\n",
+    "\n",
     "train = text[text.source == 'train'].drop('source', axis=1)\n",
     "test = text[text.source == 'test'].drop('source', axis=1)\n",
     "train.to_csv('data/text/train_text_est.csv', index=True)\n",
