--- a/preparation.ipynb
+++ b/preparation.ipynb
@@ -463,11 +463,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# early type cleaning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['type'] = data['type'].replace('fotonegatiiv, fotonegatiiv', 'fotonegatiiv') "
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# get typeless ready"
+    "# Only for typeless data"
    ]
   },
   {
